# ce-pin

./: CHANGELOG.md  Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
docs/: protocol.md
examples/: demo.ps1  demo.sh  grant_chain.rs
src/: audit.rs  caps.rs  client.rs  config.rs  held.rs  host.rs  lib.rs  main.rs  metrics.rs  pinset.rs  placement.rs  proto.rs  repair.rs
tests/: host_logic.rs  integration.rs  live_mesh.rs  properties.rs
