[package]
name = "ce-pin"
version = "0.1.0"
edition = "2024"
description = "Private CDN / paid blob-pinning app on CE — content-availability over the mesh, content-addressing as the integrity proof. An application built ON CE primitives, not part of the node."
license = "MIT"
repository = "https://github.com/ce-net/ce-pin"
keywords = ["ce", "pinning", "cdn", "content-addressed", "p2p"]
categories = ["command-line-utilities", "network-programming"]

# ce-pin is both a small reusable library (the pin-set index, protocol types, placement helpers)
# and the `ce-pin` binary. The library is unit-tested; the binary is the CLI over it.
[lib]
name = "ce_pin"
path = "src/lib.rs"

[[bin]]
name = "ce-pin"
path = "src/main.rs"

[dependencies]
# The CE SDK: blobs/objects (put_blob/get_blob/put_object/get_object), mesh request/reply,
# discovery, atlas/history, payment channels. The `serve` feature pulls in `ce_rs::serve` — the
# shared mesh-app serving loop (SSE inbox + reply-token de-dup + reconnect/backoff) that the host
# uses instead of hand-rolling its own poll loop. Depended on by path for the MVP per the build plan.
ce-rs = { path = "../ce-rs", features = ["serve"] }
# The capability verifier primitive — host loops authorize a signed attenuating chain before pinning.
ce-cap = { path = "../ce/crates/ce-cap" }
# Identity is only needed by tests (to forge capability chains); kept as a dev-dependency below.

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

[dev-dependencies]
ce-identity = { path = "../ce/crates/ce-identity" }
proptest = "1"
